--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Webpage coming soon!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Ian Glen Neal</title>
+    </head>
+    <body>
+        Webpage coming soon!
+    </body>
+</html>
