--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <body>
         <div class="sidebar">
             <div id="resume" class="circle colorGreen">
-                <a href="documents/resume.pdf">
-                    <img src="images/resume-icon.png" height="30" width="30" alt="Resume">
+                <a class="sidebarImage" href="documents/resume.pdf">
+                    <img src="images/resume-icon.png" height="30" width="30">
                 </a>
+                <div class="altText">Resume</div>
             </div>
         </div>
 
