Trying to make the resume icon disappear on hover

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ian Glen Neal</title>
+        <title>Ian Glen Neal - 1</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <!-- fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <a class="sidebarImage" href="documents/resume.pdf">
                 <div id="resume" class="circle colorGreen">
-                    <img src="images/resume-icon.png" height="30" width="30" />
+                    <img class="disappear" src="images/resume-icon.png" height="30" width="30" />
                     <div class="altText">Resume</div>
                 </div>
             </a>
