Remove dead class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <a class="sidebarImage" href="documents/resume.pdf">
                 <div id="resume" class="circle colorGreen">
-                    <img class="disappear" src="images/resume-icon.png" height="30" width="30" />
+                    <img src="images/resume-icon.png" height="30" width="30" />
                     <div class="altText">Resume</div>
                 </div>
             </a>
