Updates and some functionality

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
-        <title>Ian Glen Neal - 1</title>
+        <title> Ian Glen Neal </title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <!-- fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -11,12 +11,18 @@
     </head>
     <body>
         <div class="sidebar">
-            <a class="sidebarImage" href="documents/resume.pdf">
+           <!--  <a href="documents/resume.pdf">
                 <div id="resume" class="circle colorGreen">
                     <img src="images/resume-icon.png"/>
                     <div class="altText">Resume</div>
                 </div>
-            </a>
+            </a> -->
+            <div id="resume" class="circle colorGreen">
+                <a href="documents/resume.pdf">
+                    <img src="images/resume-icon.png"/>
+                    <div class="altText">Resume</div>
+                </a>
+            </div>    
         </div>
 
         <div class="boundedBox wrapword">
