--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             The University of Texas, Class of 2017
                             <ul>
                                 <li>Honors Computer Science (Turing Honors Program)</li>
-                                <li>Electrical and Computer Engineering</li>
+                                <li>Electrical and Computer Engineering, Integrated Circuits</li>
                             </ul>
                         </p>
                     </div>
@@ -73,7 +73,7 @@
                             <li> Selenium </li>
                             <li> ARM assembly (Thumb2) </li>
                             <li> x86-64 </li>
-                            <li> SQL </li>
+                            <li> SQL-like languages </li>
                         </ul>
                 </div>
             </div>
