--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: page
 title: Contact
 permalink: /contact/
 ---
-
+"{{ '/public/css/poole.css' | relative_url }}"
 {% comment %}
 For a helpful guide:
   https://blog.r3bl.me/en/simple-social-media-links-jekyll/
