Fix other baseurl issues

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@ title: Contact
 permalink: /contact/
 ---
 <p>
+Something
 {{ '/public/css/poole.css' | relative_url }}
+Something
 </p>
 
 {% comment %}
