--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,12 @@ For the updated fonts/more options:
   </li>
 {% endif %}
 
-{% if site.stackoverflow_username %}
+{% if site.medium_username %}
   <li>
-    <a href="https://stackoverflow.com/users/{{ site.stackoverflow_username }}" >
-      <i class="fab fa-stack-overflow"></i> Stack Overflow
+    <a href="https://medium.com/@{{ site.twitter_username }}">
+      <i class="fab fa-medium-m"></i> Medium (@{{ site.medium_username }})
     </a>
-    <p>I answer a question or two when I can.</p>
+    <p> Where I do the minimal blogging that I attempt to do. </p>
   </li>
 {% endif %}
 
@@ -48,6 +48,15 @@ For the updated fonts/more options:
       <i class="fab fa-twitter"></i> Twitter (@{{ site.twitter_username }})
     </a>
     <p> As of time of writing, my Twitter account is rather inactive. </p>
+  </li>
+{% endif %}
+
+{% if site.stackoverflow_username %}
+  <li>
+    <a href="https://stackoverflow.com/users/{{ site.stackoverflow_username }}" >
+      <i class="fab fa-stack-overflow"></i> Stack Overflow
+    </a>
+    <p>I answer a question or two when I can.</p>
   </li>
 {% endif %}
 
