Move around some content so the blog section isn't the first thing up on the site. Add a pubs page -- I'd almost be willing to call this a website now.

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ For the updated fonts/more options:
   https://fontawesome.com/get-started/web-fonts-with-css
 {% endcomment %}
 
-<ul>
+<ul class="contact">
   <li>
     <i class="far fa-envelope"></i> {{ site.gmail_address }}
     <p> For personal inquiries. </p>
