Updating profile, contact, publications

--- a/contact.html
+++ b/contact.html
@@ -33,16 +33,16 @@ For the updated fonts/more options:
   </li>
 {% endif %}
 
-{% comment %}
 {% if site.medium_username %}
   <li>
-    <a href="https://medium.com/@{{ site.twitter_username }}">
+    <a href="https://medium.com/@{{ site.medium_username }}">
       <i class="fab fa-medium-m"></i> Medium (@{{ site.medium_username }})
     </a>
     <p> Where I do the minimal blogging that I attempt to do. </p>
   </li>
 {% endif %}
 
+{% comment %}
 {% if site.twitter_username %}
   <li>
     <a href="https://twitter.com/{{ site.twitter_username }}">
